# pytorch-receptive-field

./: .gitignore  README.md  main.py  pyproject.toml
torch_receptive_field/: receptive_field.py
