[tool.poetry]
name = "pytorch-receptive-field"
version = "0.1.0"
description = "forked from Fangyh09/pytorch-receptive-field"
authors = ["Fangyh09(Original) and khirotaka"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.6.0"
numpy = "^1.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
